syntax = "proto3";

option go_package = "nemon/nemon";

service Worker{
  rpc GetApps(GetAppsRequest) returns (GetAppsResponse);
}

message GetAppsRequest{
  int64 key = 1;
}

message GetAppsResponse{
  message ApplicationInfo{
    string name = 1;
    string location = 2;
  }
  repeated ApplicationInfo applications = 1;
}